@@ -15,8 +15,12 @@ import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.method.annotation.HandlerMethodValidationException;
 import org.springframework.web.method.annotation.MethodArgumentTypeMismatchException;
+import org.springframework.web.multipart.MaxUploadSizeExceededException;
 import org.springframework.web.multipart.support.MissingServletRequestPartException;
 import org.springframework.web.servlet.resource.NoResourceFoundException;
+import jakarta.servlet.http.HttpServletRequest;
+import org.springframework.dao.DataIntegrityViolationException;
+import org.springframework.web.bind.MissingRequestHeaderException;
 
 @Slf4j
 @RestControllerAdvice
@@ -45,7 +49,7 @@ public class GlobalExceptionHandler {
     public ResponseEntity<FailureResponse> handleValidationException(MethodArgumentNotValidException e) {
         String message = e.getBindingResult().getFieldErrors().isEmpty()
                 ? GlobalErrorCode.INVALID_INPUT_VALUE.getMessage()
-                : e.getBindingResult().getFieldErrors().get(0).getDefaultMessage();
+                : e.getBindingResult().getFieldErrors().getFirst().getDefaultMessage();
         log.warn("Validation failed: {}", message);
         return buildErrorResponse(GlobalErrorCode.INVALID_INPUT_VALUE, message);
     }
@@ -59,13 +63,13 @@ public class GlobalExceptionHandler {
     @ExceptionHandler(HttpMessageNotReadableException.class)
     public ResponseEntity<FailureResponse> handleHttpMessageNotReadable(HttpMessageNotReadableException e) {
         log.warn("Unreadable message: {}", e.getMessage());
-        return buildErrorResponse(GlobalErrorCode.INVALID_INPUT_VALUE);
+        return buildErrorResponse(GlobalErrorCode.MESSAGE_NOT_READABLE);   // INVALID_INPUT_VALUE → 변경
     }
 
     @ExceptionHandler(MethodArgumentTypeMismatchException.class)
     public ResponseEntity<FailureResponse> handleTypeMismatch(MethodArgumentTypeMismatchException e) {
         log.warn("Type mismatch: param={}, value={}", e.getName(), e.getValue());
-        return buildErrorResponse(GlobalErrorCode.INVALID_INPUT_VALUE);
+        return buildErrorResponse(GlobalErrorCode.METHOD_ARGUMENT_TYPE_MISMATCH);   // INVALID_INPUT_VALUE → 변경
     }
 
     @ExceptionHandler(MissingServletRequestParameterException.class)
@@ -86,6 +90,19 @@ public class GlobalExceptionHandler {
         return buildErrorResponse(GlobalErrorCode.INVALID_INPUT_VALUE);
     }
 
+    @ExceptionHandler(MissingRequestHeaderException.class)
+    public ResponseEntity<FailureResponse> handleMissingHeader(MissingRequestHeaderException e) {
+        log.warn("Missing header: {}", e.getHeaderName());
+        return buildErrorResponse(GlobalErrorCode.MISSING_REQUEST_HEADER);
+    }
+
+    // === 데이터 무결성 ===
+    @ExceptionHandler(DataIntegrityViolationException.class)
+    public ResponseEntity<FailureResponse> handleDataIntegrity(DataIntegrityViolationException e) {
+        log.warn("Data integrity violation: {}", e.getMessage());
+        return buildErrorResponse(GlobalErrorCode.DATA_INTEGRITY_VIOLATION);
+    }
+
     // === 라우팅 / 메서드 ===
     @ExceptionHandler(NoResourceFoundException.class)
     public ResponseEntity<FailureResponse> handleNoResourceFound(NoResourceFoundException e) {
@@ -100,8 +117,14 @@ public class GlobalExceptionHandler {
     }
 
     @ExceptionHandler(Exception.class)
-    public ResponseEntity<FailureResponse> handleException(Exception e) {
-        log.error("Unhandled exception: ", e);
+    public ResponseEntity<FailureResponse> handleException(Exception e, HttpServletRequest request) {
+        log.error("Unhandled exception - {} {}", request.getMethod(), request.getRequestURI(), e);
         return buildErrorResponse(GlobalErrorCode.INTERNAL_SERVER_ERROR);
+    }
+
+    @ExceptionHandler(MaxUploadSizeExceededException.class)
+    public ResponseEntity<FailureResponse> handleMaxUploadSizeExceeded(MaxUploadSizeExceededException e) {
+        log.warn("Max upload size exceeded: {}", e.getMessage());
+        return buildErrorResponse(GlobalErrorCode.FILE_TOO_LARGE);
     }
 }
